# heimdal

./: .gitignore  .goreleaser.yaml  README.md  commands.go  go.mod  go.sum  main.go  render.go
.github/workflows/: release.yml
cmd/: auth_cmd.go  auto.go  config.go  context.go  demo.go  init.go  login.go  logout.go  org.go  root.go  test.go  update.go  use.go  version.go
homebrew/Formula/: heimdal.rb
internal/agent/: agent.go
internal/auth/: auth.go
internal/config/: config.go
internal/output/: hooks.go  json.go  marks.go  metrics.go  pane.go  printer.go  steps.go
internal/runner/: client.go  hooks.go  models.go  runner.go
python/: README.md  pyproject.toml
python/scripts/: publish.sh  release.sh
python/src/ailab_eval/: launcher.py
scripts/: bootstrap.sh  install.cmd  install.ps1  install.sh  upload-release.sh
